--- a/TDD/requirements.txt
+++ b/TDD/requirements.txt
@@ -1,3 +1,6 @@
-Django>=2.1.3,<2.2.0
-djangorestframework>=3.9.0,<3.10.0
-
+asgiref==3.5.0
+Django==4.0.4
+djangorestframework==3.13.1
+pytz==2022.1
+sqlparse==0.4.2
+tzdata==2022.1
