--- a/DRF_Study/Dockerfile
+++ b/DRF_Study/Dockerfile
@@ -1,11 +1,12 @@
 FROM python:3.10
 ENV PYTHONUNBUFFERED 1
 RUN apt update && apt install nano
+RUN apt-get install inetutils-ping
 # 현재 디렉토리 > 도커 컨테이너 DRF로 마운트
 ADD . /DRF
 
 WORKDIR /DRF
 
-RUN pip install -r requirements.txt && pip install django-filter
+RUN pip install -r requirements.txt && pip install django-filter &&  pip install drf-yasg
 
 #CMD ["python manage.py runserver --settings=conf.settings.local"]
