모니터링 리팩토링

--- a/FT_Monitor/config.ini
+++ b/FT_Monitor/config.ini
@@ -5,7 +5,7 @@ opr = https://litchi-account.fount.co/api/v1
 kb = http://stage-kb-tr.fount.co/api/v1/kb
 
 [API_BASE]
-account = /accounts
+accounts = /accounts
 
 [API_URL]
 asset = /asset
